docfx/versioned/Hexes/0.3.0/ru/concepts/data-storage/maps.md
# Карты

Карта гексов связывает одно значение с каждой ячейкой прямоугольной
<xref:Akeldov.Math.Hexes.HexMapTopology>. Топология задаёт допустимые X/Y-индексы, раскладку и
число ячеек, а карта хранит данные. Карты подходят для ландшафта, масок, стоимостей, меток и
другого состояния ячеек.

## Выбор типа карты

| Тип | Назначение |
|---|---|
| `IHexMap<TValue>` | Доступ только для чтения к любой карте с топологией |
| `HexMap<TValue>` | Изменяемое хранилище произвольных значений |
| `ISpatialHexMap<TValue>` | Доступ только для чтения к значениям с геометрией в мировом пространстве |
| `SpatialHexMap<TValue>` | Изменяемые произвольные значения с сохранённой геометрией |
| `BoolHexMap` / `SpatialBoolHexMap` | Логические маски, операторы, морфология и связность |
| `IntHexMap` / `SpatialIntHexMap` | Целочисленные поля с экстремумами, арифметикой, сравнениями и преобразованиями диапазона |
| `FloatHexMap` / `SpatialFloatHexMap` | Вещественные поля с числовыми операциями, шумом, размытием и преобразованиями диапазона |

Специализированные пространственные карты наследуют `SpatialHexMap<TValue>` и сохраняют
<xref:Akeldov.Math.Hexes.Geometry.HexMapGeometry>. Их варианты без геометрии наследуют
`HexMap<TValue>`. Каждый описанный ниже оператор и метод преобразования создаёт новую изменяемую
карту и не меняет исходные карты.

## Создание и индексирование

```csharp
using Akeldov.Math.Hexes;
using Akeldov.Math.Spatial2D;

var topology = new HexMapTopology(4, 3, Layout.OddR);
var terrain = new HexMap<string?>(topology);
var cell = new VectorXYInt(2, 1);

terrain[cell] = "forest";
string? value = terrain[cell];
```

Конструктор с топологией выделяет `Topology.Count` ячеек со значением `default(TValue)`.
Индексатор с `VectorXYInt` проверяет X/Y-координаты, а плоский индексатор использует построчный
порядок. Недопустимый индекс приводит к `IndexOutOfRangeException`.

Конструкторы с массивом сохраняют переданный массив без копирования. Клонируйте данные перед
созданием карты, если ей нужно независимое хранилище. Описанные ниже методы преобразования,
напротив, копируют значения.

## Получение числовых экстремумов

`IntHexMap` и `FloatHexMap` предоставляют `Min` и `Max`. Каждое свойство обходит карту. Метод
`GetMinMax` получает оба экстремума за один проход, а `TryGetMinMax` подходит для пустой карты.
Чтение `Min`, `Max` или `GetMinMax` у пустой карты приводит к `InvalidOperationException`.

## Поячеечные операторы

Числовые карты поддерживают унарное отрицание и следующие семейства бинарных операторов:

| Операторы | Операнды | Результат |
|---|---|---|
| `+`, `-`, `*`, `/`, `%` | Две целочисленные карты | Целочисленная карта |
| `+`, `-`, `*`, `/`, `%` | Любая пара целочисленной и вещественной карт | Вещественная карта |
| `+`, `-`, `*`, `/`, `%` | Числовая карта и константа соответствующего типа в любом порядке | Карта того же числового типа |
| `<`, `>`, `<=`, `>=` | Числовые карты, включая смешанные пары | Логическая карта |
| `<`, `>`, `<=`, `>=` | Числовая карта и константа соответствующего типа в любом порядке | Логическая карта |

Библиотека намеренно не перегружает `==` и `!=` для поячеечного сравнения. Целочисленные деление
и остаток следуют правилам C#, а вещественные операции — правилам IEEE 754.

```csharp
var costs = new IntHexMap(topology, new[]
{
    1, 2, 3, 4,
    5, 6, 7, 8,
    9, 10, 11, 12,
});

IntHexMap adjusted = -(costs + 2) * 3;
BoolHexMap expensive = costs >= 8;

var elevation = new FloatHexMap(topology, new float[topology.Count]);
FloatHexMap weighted = (elevation + costs) * 0.5f;
BoolHexMap aboveCost = elevation > costs;
```

У двух обычных карт должны совпадать топологии. У двух пространственных карт должна совпадать вся
геометрия: топология, начало координат и радиус. Пространственную карту можно комбинировать с
обычной, если их топологии равны; результат будет пространственным и сохранит геометрию
пространственного операнда. Те же правила действуют для `&`, `|` и `^` логических карт, а унарный
`!` инвертирует логическую карту.

## Ограничение и перенос диапазона

`Clamp(min, max)` ограничивает каждое значение включительным интервалом. `Rescale(newMin, newMax)`
линейно переносит минимум и максимум исходной карты в новый включительный интервал:

```csharp
IntHexMap boundedCosts = costs.Clamp(2, 8);
FloatHexMap normalizedElevation = elevation.Rescale(0f, 1f);
```

Оба метода требуют упорядоченный целевой интервал и возвращают новую карту. Постоянная карта при
`Rescale` заполняется значением `newMin`; целочисленный результат округляется к ближайшему чётному.
Пространственные перегрузки сохраняют геометрию исходной карты.

## Обработка логических областей

Логическая морфология учитывает ячейку и шесть соседей, смежных с ней по ребру. Отсутствующие
соседи за пределами конечной топологии игнорируются.

```csharp
var land = new BoolHexMap(topology, new bool[topology.Count]);

BoolHexMap expanded = land.Dilate();
BoolHexMap contracted = land.Erode();
BoolHexMap opened = land.Open();
BoolHexMap closed = land.Close();
BoolHexMap outline = land.Outline();
```

`Open` выполняет эрозию, затем дилатацию, а `Close` — дилатацию, затем эрозию. Оба метода делают
два прямых прохода с временным буфером из пула и не создают промежуточную публичную карту.

Методы связности также используют соседство по шести рёбрам:

```csharp
BoolHexMap region = land.FloodFill(new VectorXYInt(1, 1));
(IntHexMap labels, int count) = land.ConnectedComponents();
IntHexMap distanceToWater = land.DistanceTransform(targetValue: false);
```

`FloodFill` выбирает связную область с тем же логическим значением, что и начальная ячейка.
`ConnectedComponents` назначает компонентам `true` детерминированные положительные метки; нулевая
метка соответствует `false`. `DistanceTransform` хранит минимальное число гексагональных шагов до
запрошенного значения или `int.MaxValue`, если такого значения нет. Пространственные перегрузки
возвращают соответствующую пространственную карту и сохраняют геометрию.

## Преобразование специализированных карт

`ToBoolHexMap`, `ToIntHexMap` и `ToFloatHexMap` создают независимые обычные копии совместимых карт,
заданных через интерфейс. `ToSpatialHexMap(geometry)` копирует обычную карту в соответствующий
пространственный тип; топология переданной геометрии должна совпадать. `ToHexMap()` копирует
пространственную карту обратно в специализированный тип без геометрии.

Эти методы всегда выделяют независимое хранилище. Последующие изменения исходной карты и
результата не влияют друг на друга.

## Генерация и сглаживание вещественных полей

Детерминированный фрактальный шум Перлина можно создать из топологии и затем сгладить:

```csharp
FloatHexMap noise = topology.CreatePerlinNoise(
    seed: 12345,
    scale: 16f,
    octaves: 5,
    persistence: 0.5f,
    lacunarity: 2f);

FloatHexMap smoothNoise = noise.GaussianBlur(sigma: 1.25f);
```

`CreatePerlinNoise` делает выборку в центрах гексов единичного радиуса и возвращает значения в
`[0, 1]`. `GaussianBlur` возвращает новую карту и нормализует ядро у границ карты.

Переходите к разделу [«Полные и частичные окрестности»](complete-and-partial-neighborhoods.md),
чтобы узнать о значениях фиксированного размера и выборке соседей с учётом раскладки.
